Revise content in index.html for clarity and detail
Updated descriptions for integration, interoperability, and operational readiness sections to enhance clarity and detail.

--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
           </div>
           <div class="tile">
             <h3>Integration and interoperability</h3>
-            <p>APIs, HL7/FHIR, mapping clarity, and environment-ready validation that reduces rework and outages.</p>
+            <p>APIs, HL7/FHIR, Cerner CCL, and enterprise interoperability patterns, including EMPI-aware workflows that reduce identity issues, rework, and production outages.</p>
           </div>
           <div class="tile">
             <h3>Data quality and automation</h3>
@@ -616,7 +616,7 @@
           </div>
           <div class="tile">
             <h3>Operational readiness</h3>
-            <p>Runbooks, monitoring recommendations, and handoff documentation for support and on-call teams.</p>
+            <p>Operational guidance, monitoring recommendations, and clear handoff documentation so support teams know what to watch, how to validate changes, and how to respond when issues arise.</p>
           </div>
         </div>
 
