Refactor color property in consult-pill class

--- a/index.html
+++ b/index.html
@@ -165,12 +165,16 @@
         0 0 0 1px rgba(255,234,0,.35),
         inset 0 -1px 0 rgba(0,0,0,.18);
       color:#0b1220;
-      color:#0b1220;
       cursor:pointer;
       user-select:none;
       transition:filter .15s ease, transform .15s ease;
       white-space:nowrap;
     }
+
+    .nav .consult-pill{
+      color:#0b1220;
+    }
+
     .consult-pill:hover{filter:brightness(1.05);transform:translateY(-1px);}
 
     @media (max-width:900px){
