Enhance SEO with Open Graph and Twitter meta tags
Added Open Graph and Twitter meta tags for improved social sharing.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
   <meta name="description" content="Sheldon Global — Healthcare IT Consulting. Architecture, integration, interoperability, and data automation." />
   <title>Sheldon Global | Healthcare IT Consulting</title>
 
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Sheldon Global — Healthcare IT Consulting" />
+  <meta property="og:description" content="Healthcare IT consulting focused on architecture, interoperability, Cerner CCL, EMPI, and operationally safe integrations." />
+  <meta property="og:image" content="https://sheldonglobal.org/assets/sheldon_global_logo.png" />
+  <meta property="og:url" content="https://sheldonglobal.org/" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Sheldon Global — Healthcare IT Consulting" />
+  <meta name="twitter:description" content="Architecture, interoperability, Cerner CCL, EMPI, and integration strategy built for healthcare reality." />
+  <meta name="twitter:image" content="https://sheldonglobal.org/assets/sheldon_global_logo.png" />
+  <meta name="author" content="Sheldon Global" />
+  <meta name="robots" content="index, follow" />
+
   <style>
     :root{
       --bg:#070d18;
